--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 }</style>
     <script defer src="/public/cards.min.js?v=a120166453"></script><style>:root {--ghost-accent-color: #FF1A75;}</style>
     <link rel="stylesheet" type="text/css" href="/public/cards.min.css?v=a120166453">
+    <script defer data-domain="translatorinbraga.com" src="http://141.95.1.226:8000/js/script.js">
 </head>
 
 <body class="home-template is-head-left-logo no-pagination">
